# tax-analyzer

./: .gitattributes  .gitignore  LICENSE  License.md  README.md  ReadMe.md  bsconfig.json  calc_nyc_taxes.js  dune  dune-project  dune-workspace  hello.re  index.html  index.js  note-on-living-in-nj.markdown  note-on-living-in-nj.txt  nyc_tax_calc.js  nyc_tax_calculator.py  nyc_tax_data.py  nyc_taxes.js  package-lock.json  package.json  style.css  tax-analyzer.opam  webpack.config.js
lib/: calc.js  calc_nyc_taxes.js  nyc-taxes.js  tax-rates.js  web-interface.js
old/: WebInterface.re
public/: index.html
public/res/: index-style.css
res/: index-style.css
src/: ReactApp.re  TaxCalc.re  TaxRates.re  TaxReport.re  WebInterface.re  calc.js  dune  nyc-taxes.js  web-interface.js
